// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideTab should render set mix options correctly 1`] = `
<div class="fx-side-tab">
  <ul class="fx-side-tab_list">
    <li class="fx-side-tab_item active">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item active-next">
      <badge-stub content="惠" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="1" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
  </ul>
</div>
`;

exports[`SideTab should render set options correctly 1`] = `
<div class="fx-side-tab">
  <ul class="fx-side-tab_list">
    <li class="fx-side-tab_item active">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item active-next">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
    <li class="fx-side-tab_item">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-side-tab_item-inner"></badge-stub>
    </li>
  </ul>
</div>
`;
